Add sample code to create a Dash transaction

--- a/NBitcoin.Dash.Tests/NBitcoin.Dash.Tests.csproj
+++ b/NBitcoin.Dash.Tests/NBitcoin.Dash.Tests.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="TransactionHelper.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
